# mock-userservice-api

./: .coverage  .gitignore  Dockerfile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml
.github/workflows/: build_and_push_image.yml  checks.yml  ci.yml
scripts/: create_users.py  requirements.txt  simulate_traffic.sh  update_user_email.py
src/: database.py  main.py  models.py  schemas.py
src/routers/: users.py
test/: test_users.py
